Bug 1 squashed

--- a/Coding/Stylesheets/mss.css
+++ b/Coding/Stylesheets/mss.css
@@ -54,7 +54,7 @@ a:hover {
   font-family: "Times New Roman", serif;
 }
 
-.word, .name {
+.syntagm {
   background-color: inherit;
   text-decoration: inherit;
   color: inherit;
